Next Release

 - Removed Horde/Http_Client from vendor/ since it is not used by
   the framework itself.

 - The validator validatesUniquenessOf() now accepts an
   array in its "scope" option.  Contributed by Dmitriy Karpus.

 - Migrations can now use a shorthand notation similar to that
   introduced in Rails 2.0.  Contributed by Philipp Gildein.

 - Added ./script/createapp that can be used to bootstrap a new
   application.  Contributed by Philipp Gildein.

 - Mad_Controller_Request clears the contents of the superglobals
   by default.  This behavior can now be disabled with a constructor
   option.  Requested by John Herren.

 - Our Mad_Model_ConnectionAdapter package has been expanded and
   moved into the Horde Project as Horde_Db.  We now bundle Horde_Db 
   and support more databases.

 - Removed dependency on Solar_Json.  JSON functionality now only works
   if PHP's JSON extension is enabled.  If it is not enabled and a 
   framework function needing it is called, an exception will be thrown. 
   A workaround for older PHP versions is to define the global functions 
   json_encode() and json_decode().

 - Replaced Zend_Log with Horde_Log.

 - Replaced Mad_Support_Timer with Horde_Support_Timer.

0.1.0 (17-Oct-2008)

 - First Release